--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
         const res = await fetch(SCRIPT_URL, {
           method: 'POST',
           body: JSON.stringify({ action: 'submitScores', payload: { teacher, month, subject, scores } }),
-          headers: { 'Content-Type': 'application/json' }
+          // ### FIX: Changed Content-Type header to bypass CORS preflight check ###
+          headers: { 'Content-Type': 'text/plain;charset=utf-8' }
         });
         const result = await res.json();
         
@@ -205,7 +206,8 @@
         const res = await fetch(SCRIPT_URL, {
           method: 'POST',
           body: JSON.stringify({ action: 'exportClassToExcel', payload: { class: exportClass } }),
-          headers: { 'Content-Type': 'application/json' }
+          // ### FIX: Changed Content-Type header to bypass CORS preflight check ###
+          headers: { 'Content-Type': 'text/plain;charset=utf-8' }
         });
         const result = await res.json();
 
