--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       <div class="row">
         <div>
           <label>ជ្រើសរើសថ្នាក់:</label>
-          <select id="classSelect"><option value="">Loading...</option></select>
+          <select id="classSelect"><option value="">កំពុងទាញយកទិន្នន័យ...</option></select>
         </div>
         <div>
           <label>ជ្រើសរើសមុខវិជ្ជា:</label>
-          <select id="subjectSelect"><option value="">Loading...</option></select>
+          <select id="subjectSelect"><option value="">កំពុងទាញយកទិន្នន័យ...</option></select>
         </div>
       </div>
 
@@ -45,7 +45,7 @@
       <div class="export-section">
         <label>ជ្រើសរើសថ្នាក់ទាញយក Excel:</label>
         <div class="row">
-          <div><select id="exportClassSelect"><option value="">Loading...</option></select></div>
+          <div><select id="exportClassSelect"><option value="">កំពុងទាញយកទិន្នន័យ...</option></select></div>
           <div><button id="exportBtn">ទាញយក Excel</button></div>
         </div>
       </div>
@@ -103,14 +103,14 @@
         tableBody.innerHTML = "";
         return;
       }
-      tableBody.innerHTML = '<tr><td colspan="5">Loading students...</td></tr>';
+      tableBody.innerHTML = '<tr><td colspan="5">កំពុងទាញយកទិន្នន័យសិស្ស...</td></tr>';
       try {
         const res = await fetch(`${SCRIPT_URL}?action=getStudentsByClass&class=${selectedClass}`);
         students = await res.json();
         renderTable();
       } catch (error) {
         console.error("Error loading students:", error);
-        tableBody.innerHTML = '<tr><td colspan="5" style="color:red;">Error loading students.</td></tr>';
+        tableBody.innerHTML = '<tr><td colspan="5" style="color:red;">ទាញយកទិន្នន័យសិស្សមិនត្រឹមត្រូវ</td></tr>';
       }
     }
 
@@ -171,7 +171,7 @@
 
       const submitBtn = document.getElementById("submitBtn");
       submitBtn.disabled = true;
-      submitBtn.textContent = "Saving...";
+      submitBtn.textContent = "កំពុងរក្សាទុក...";
 
       try {
         const res = await fetch(SCRIPT_URL, {
