--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <div class="container">
     <div class="form-panel">
-      <!-- ### FIX: Main form content is now in a container to be hidden on error ### -->
+      <!-- Main form content is now in a container to be hidden on error -->
       <div id="main-form-content">
         <div class="row">
           <div>
@@ -53,7 +53,7 @@
         </div>
       </div>
       
-      <!-- ### FIX: New error panel with a retry button ### -->
+      <!-- New error panel with a retry button -->
       <div id="error-panel" style="display: none; text-align: center; padding: 20px; background-color: #ffebee; border: 1px solid #f44336; border-radius: 5px;">
         <p style="color: #d32f2f; font-weight: bold; font-size: 18px;">ទាញយកទិន្នន័យមិនสำเร็จ</p>
         <p style="color: #555; margin: 10px 0 15px 0;">សូមពិនិត្យការតភ្ជាប់អ៊ីនធឺណិតរបស់អ្នក រួចព្យាយាមម្តងទៀត។</p>
@@ -73,8 +73,8 @@
   </div>
 
   <script>
-    // CRUCIAL: Make sure this is your latest Apps Script URL
-    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzOBBcYXNisieopjneeEwsFmUIZ1DsKJsn3ytpPE0ViAh6JTlQXqCRoeGUECqx1Dh_w8Q/exec';
+    // ### CRUCIAL: Replace this with the NEW URL from your latest deployment ###
+    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzxie2TfNnXBfoAWIKgIKLnW96EZXuNDsMwSrT3zFNAyt85FTtZaokTzvetxOe3pV8Nbg/exec';
     let students = [];
 
     const mainFormContent = document.getElementById('main-form-content');
@@ -118,7 +118,7 @@
         });
       } catch (error) {
         console.error("Error loading dropdowns:", error);
-        // ### FIX: Show the error panel instead of an alert ###
+        // Show the error panel instead of an alert
         mainFormContent.style.display = 'none';
         errorPanel.style.display = 'block';
       }
