--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       
       <!-- New error panel with a retry button -->
       <div id="error-panel" style="display: none; text-align: center; padding: 20px; background-color: #ffebee; border: 1px solid #f44336; border-radius: 5px;">
-        <p style="color: #d32f2f; font-weight: bold; font-size: 18px;">ទាញយកទិន្នន័យមិនสำเร็จ</p>
+        <p style="color: #d32f2f; font-weight: bold; font-size: 18px;">ទាញយកទិន្នន័យមិនត្រឹមត្រូវ</p>
         <p style="color: #555; margin: 10px 0 15px 0;">សូមពិនិត្យការតភ្ជាប់អ៊ីនធឺណិតរបស់អ្នក រួចព្យាយាមម្តងទៀត។</p>
         <button id="retryBtn" style="background-color: #007BFF; color: white; width: auto; padding: 10px 20px; margin-top: 0;">ព្យាយាមម្តងទៀត</button>
       </div>
